[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Paddle.gd" type="Script" id=2]
[ext_resource path="res://Assets/Graphics/breakout.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Ball.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sounds/paddle_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/brick-hit-2.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sounds/wall_hit.wav" type="AudioStream" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 32, 8 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 4.0

[node name="PlayScreen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 434.0
margin_bottom = 243.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Level" type="Node" parent="." index="0"]

script = ExtResource( 1 )
posbyColour = [ Vector2( 0, 0 ), Vector2( 128, 0 ), Vector2( 64, 16 ), Vector2( 0, 32 ), Vector2( 128, 32 ) ]

[node name="Paddle" type="Area2D" parent="Level" index="0"]

editor/display_folded = true
position = Vector2( 217, 211 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Pause", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="paddle" type="Sprite" parent="Level/Paddle" index="0"]

texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 32, 64, 64, 16 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Paddle" index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Ball" type="Area2D" parent="Level" index="1"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_mask = 6
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 4 )
_sections_unfolded = [ "Audio Bus", "Collision", "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="ball" type="Sprite" parent="Level/Ball" index="0"]

texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 96, 48, 8, 8 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Ball" index="1"]

shape = SubResource( 2 )

[node name="PaddleHitSound" type="AudioStreamPlayer" parent="Level" index="2"]

stream = ExtResource( 5 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="BrickHitSound" type="AudioStreamPlayer" parent="Level" index="3"]

stream = ExtResource( 6 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="WallHitSound" type="AudioStreamPlayer" parent="Level" index="4"]

stream = ExtResource( 7 )
volume_db = -30.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="breakout" type="Sprite" parent="." index="1"]

position = Vector2( 0, 244 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="Level/Paddle" to="Level" method="_on_Paddle_area_entered"]


